# poly

demo_poly-master/: Cargo.toml
demo_poly-master/src/: config.rs  main.rs
demo_poly-master/src/api/: handlers.rs  mod.rs
demo_poly-master/src/db/: account.rs  constants.rs  database.rs  mod.rs
demo_poly-master/src/errors/: custom.rs
demo_poly-master/src/modules/: mod.rs
demo_poly-master/src/modules/bets/: mod.rs  opposing.rs
demo_poly-master/src/modules/deposit/: mod.rs
demo_poly-master/src/modules/merge/: mod.rs
demo_poly-master/src/modules/registration/: mod.rs
demo_poly-master/src/modules/split/: mod.rs
demo_poly-master/src/modules/stats_check/: mod.rs  scraping.rs
demo_poly-master/src/modules/withdraw/: mod.rs
demo_poly-master/src/onchain/: client.rs  multicall.rs
demo_poly-master/src/polymarket/api/clob/: schemas.rs
demo_poly-master/src/polymarket/api/events/: schemas.rs
demo_poly-master/src/polymarket/api/relayer/: common.rs  constants.rs
demo_poly-master/src/polymarket/api/user/: schemas.rs
demo_poly-master/src/utils/: audit_log.rs  crypto.rs  fetch.rs  log_collector.rs  logger.rs  mod.rs  task_manager.rs
